--- a/Client/src/pages/homePage/home.css
+++ b/Client/src/pages/homePage/home.css
@@ -107,6 +107,10 @@
   left: 0;
 }
 
+.main-arrow {
+  background-color: rgba(190, 190, 190, 0.2);
+}
+
 .arrow:hover {
   background-color: rgba(190, 190, 190, 0.6);
 }
@@ -194,9 +198,17 @@
   .arrow {
     display: none;
   }
+  .main-arrow {
+    display: flex;
+    bottom: 0.5rem;
+    height: 3rem;
+    font-size: 4rem;
+    background-color: rgba(60, 62, 73, 0);
+    color: var(--font-light);
+  }
   .main-flex-container {
     padding: 0;
-    overflow: auto;
+    gap: 0;
   }
   .grid-container {
     overflow: auto;
