--- a/Client/src/components/navbar/navbar.css
+++ b/Client/src/components/navbar/navbar.css
@@ -57,6 +57,7 @@
   margin-left: 2rem;
   list-style: none;
   display: flex;
+  align-items: center;
   gap: 1.3rem;
 }
 
@@ -168,6 +169,14 @@
   opacity: 0.4;
 }
 
+.nav-logo {
+  height: 3.5rem;
+}
+
+.nav-logo > img {
+  height: 100%;
+}
+
 @media screen and (max-width: 1000px) {
   .nav-svg {
     display: block;
@@ -194,10 +203,12 @@
   .first-row {
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
   }
   .sec-row {
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
     margin-left: 2rem;
   }
   .search-container {
@@ -209,5 +220,8 @@
   }
   .rule {
     visibility: hidden;
+  }
+  .nav-logo {
+    display: none;
   }
 }
