--- a/Client/src/pages/homePage/home.css
+++ b/Client/src/pages/homePage/home.css
@@ -47,6 +47,7 @@
   width: 100%;
   height: 100%;
   cursor: pointer;
+  border-radius: 0.4rem;
 }
 
 .flex-col > img {
@@ -54,6 +55,7 @@
   object-position: right;
   height: 100%;
   cursor: pointer;
+  border-radius: 2rem;
 }
 
 .flex-col > img::before {
@@ -217,6 +219,7 @@
 
 @media screen and (max-width: 550px) {
   .flex-col > img {
-    height: auto;
+    object-fit: cover;
+    padding: 1rem 0.5rem;
   }
 }
